--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <form method="POST" data-netlify-"true" class="form">
+        <form method="POST" data-netlify="true" class="form">
           <div class="field"><input type="text" name="name" id="name" placeholder="Name..."></div>
           <div class="field"><input type="email" name="email" id="email" placeholder="Email..."></div>
           <div class="field"><textarea name="message" id="message" placeholder="Message..." rows="10"></textarea></div>
