added additional fields

--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@
         </div>
 
         <form method="POST" data-netlify="true" class="form">
-          <div class="field"><input type="text" name="name" id="name" placeholder="Name..."></div>
-          <div class="field"><input type="email" name="email" id="email" placeholder="Email..."></div>
-          <div class="field"><textarea name="message" id="message" placeholder="Message..." rows="10"></textarea></div>
+          <div class="field"><input type="text" name="name" id="name" placeholder="Name"></div>
+          <div class="field"><input type="text" name="address" id="address" placeholder="Address"></div>
+          <div class="field"><input type="text" name="city" id="city" placeholder="City"></div>
+          <div class="field"><input type="text" name="state" id="state" placeholder="State"></div>
+          <div class="field"><input type="number" name="zip" id="zip" placeholder="Zip"></div>
+          <div class="field"><input type="tel" name="phone" id="phone" placeholder="Phone"></div>
+          <div class="field"><input type="email" name="email" id="email" placeholder="Email"></div>
+          <div class="field"><textarea name="message" id="message" placeholder="Message" rows="10"></textarea></div>
           <div class="field"><div data-netlify-recaptcha="true"></div></div>
           <ul class="actions"><li><input class="btn" type="submit" value="Get In Contact"></li></ul>
         </form>
