--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header__logo-wrapper">
           <img
             class="header__logo"
-            src="/dist/images/RMJ_Logo.png"
+            src="/images/RMJ_Logo.png"
             alt="RMJ Logo"
           />
         </div>
