--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <div class="hero__slider">
             <div class="hero__cell hero__cell--1"></div>
           </div>
-        <!-- </div>
-
-        <form method="POST" data-netlify="true" class="form">
+        </div>
+  
+        <!-- <form method="POST" data-netlify="true" class="form">
           <div class="field"><input type="text" name="name" id="name" placeholder="Name"></div>
           <div class="field"><input type="text" name="address" id="address" placeholder="Address"></div>
           <div class="field"><input type="text" name="city" id="city" placeholder="City"></div>
@@ -85,71 +85,132 @@
           <!-- Name Field --> 
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter name" required>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required>
           </div>
+
           <!-- Address Field -->
           <div class="form-group">
             <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="Enter address">
+            <input type="text" class="form-control" id="address" name="address" placeholder="Enter address">
           </div>
+
           <!-- City Field -->
           <div class="form-group">
             <label for="city">City</label>
-            <input type="text" class="form-control" id="city" placeholder="Enter city">
+            <input type="text" class="form-control" id="city" name="city" placeholder="Enter city">
           </div>
+
           <!-- State Field -->
           <div class="form-group">
             <label for="state">State</label>
-            <input type="text" class="form-control" id="state" placeholder="Enter state">
+            <select class="form-control" name="state" id="state">
+              <option value="AL">Alabama</option>
+              <option value="AK">Alaska</option>
+              <option value="AZ">Arizona</option>
+              <option value="AR">Arkansas</option>
+              <option value="CA">California</option>
+              <option value="CO">Colorado</option>
+              <option value="CT">Connecticut</option>
+              <option value="DE">Delaware</option>
+              <option value="DC">District Of Columbia</option>
+              <option value="FL">Florida</option>
+              <option value="GA">Georgia</option>
+              <option value="HI">Hawaii</option>
+              <option value="ID">Idaho</option>
+              <option value="IL">Illinois</option>
+              <option value="IN">Indiana</option>
+              <option value="IA">Iowa</option>
+              <option value="KS">Kansas</option>
+              <option value="KY">Kentucky</option>
+              <option value="LA">Louisiana</option>
+              <option value="ME">Maine</option>
+              <option value="MD">Maryland</option>
+              <option value="MA">Massachusetts</option>
+              <option value="MI">Michigan</option>
+              <option value="MN">Minnesota</option>
+              <option value="MS">Mississippi</option>
+              <option value="MO">Missouri</option>
+              <option value="MT">Montana</option>
+              <option value="NE">Nebraska</option>
+              <option value="NV">Nevada</option>
+              <option value="NH">New Hampshire</option>
+              <option value="NJ">New Jersey</option>
+              <option value="NM">New Mexico</option>
+              <option value="NY">New York</option>
+              <option value="NC">North Carolina</option>
+              <option value="ND">North Dakota</option>
+              <option value="OH">Ohio</option>
+              <option value="OK">Oklahoma</option>
+              <option value="OR">Oregon</option>
+              <option value="PA">Pennsylvania</option>
+              <option value="RI">Rhode Island</option>
+              <option value="SC">South Carolina</option>
+              <option value="SD">South Dakota</option>
+              <option value="TN">Tennessee</option>
+              <option value="TX">Texas</option>
+              <option value="UT">Utah</option>
+              <option value="VT">Vermont</option>
+              <option value="VA">Virginia</option>
+              <option value="WA">Washington</option>
+              <option value="WV">West Virginia</option>
+              <option value="WI">Wisconsin</option>
+              <option value="WY">Wyoming</option>
+            </select>
           </div>
+
           <!-- Zip Field -->
           <div class="form-group">
             <label for="zip">Zip</label>
-            <input type="text" class="form-control" id="zip" placeholder="Enter zip">
+            <input type="text" class="form-control" id="zip" name="zip" placeholder="Enter zip">
           </div>
+
           <!-- Phone Field -->
           <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="tel" class="form-control" id="phone" placeholder="Enter phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
             required>
           </div>
-          <!-- <span style="font-size: 12px">Format: 123-456-7890</span> -->
+
           <!-- Email Field -->
           <div class="form-group">
             <label for="email">Email address</label>
             <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
           </div>
+
           <!-- Type of Lot -->
           <div class="form-group">
             <label for="typeOfLot">Type of Lot</label>
-            <select class="form-control" id="typeOfLot">
+            <select class="form-control" id="typeOfLot" name="typeOfLot">
               <option>Inside</option>
               <option>Cul de sac</option>
               <option>Corner</option>
             </select>
           </div>
+
           <!-- Type of Service -->
           <div class="form-group">
             <label for="typeOfService">Type of Service</label>
-            <select class="form-control" id="typeOfService">
+            <select class="form-control" id="typeOfService" name="typeOfService">
               <option>Weekly</option>
               <option>Full Service</option>
             </select>
           </div>
+
           <!-- Pets -->
           <div class="form-group">
             <label for="pets">Pets in yard?</label>
-            <select class="form-control" id="pets">
+            <select class="form-control" id="pets" name="pets">
               <option>Yes</option>
               <option>No</option>
             </select>
           </div>
+
           <!-- Gate Locks -->
           <div class="form-group">
             <label for="gatelocks">Gates Locked?</label>
-            <select class="form-control" id="gatelocks">
-              <option>Weekly</option>
-              <option>Full Service</option>
+            <select class="form-control" id="gatelocks" name="gatelocks">
+              <option>Yes</option>
+              <option>No</option>
             </select>
           </div>
           <div class="form-group">
