--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </address>
         </div>
       </header>
+
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
@@ -61,180 +62,240 @@
           </li>
         </ul>
       </nav>
-      <main>
+
+      <main class="main">
+        <!-- Hero Section -->
         <div class="hero">
           <div class="hero__slider">
             <div class="hero__cell hero__cell--1"></div>
           </div>
         </div>
-  
-        <!-- <form method="POST" data-netlify="true" class="form">
-          <div class="field"><input type="text" name="name" id="name" placeholder="Name"></div>
-          <div class="field"><input type="text" name="address" id="address" placeholder="Address"></div>
-          <div class="field"><input type="text" name="city" id="city" placeholder="City"></div>
-          <div class="field"><input type="text" name="state" id="state" placeholder="State"></div>
-          <div class="field"><input type="number" name="zip" id="zip" placeholder="Zip"></div>
-          <div class="field"><input type="tel" name="phone" id="phone" placeholder="Phone"></div>
-          <div class="field"><input type="email" name="email" id="email" placeholder="Email"></div>
-          <div class="field"><textarea name="message" id="message" placeholder="Message" rows="10"></textarea></div>
-          <div class="field"><div data-netlify-recaptcha="true"></div></div>
-          <ul class="actions"><li><input class="btn" type="submit" value="Get In Contact"></li></ul>
-        </form> -->
 
-        <form method="POST" data-netlify="true" class="form">
-          <!-- Name Field --> 
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required>
-          </div>
+        <!-- Contact Section -->
+        <div class="contact">
+          <h2 class="homepage-headline contact__headline">Get In Touch</h2>
+          <form method="POST" data-netlify="true" class="contact__form">
+            <!-- Name Field -->
+            <div class="form-group contact__form-field">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="name"
+                name="name"
+                placeholder="Enter name"
+                required
+              />
+            </div>
+            <!-- Address Field -->
+            <div class="form-group contact__form-field">
+              <label for="address">Address</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="address"
+                name="address"
+                placeholder="Enter address"
+              />
+            </div>
+            <!-- City Field -->
+            <div class="form-group contact__form-field">
+              <label for="city">City</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="city"
+                name="city"
+                placeholder="Enter city"
+              />
+            </div>
+            <!-- State Field -->
+            <div class="form-group contact__form-field">
+              <label for="state">State</label>
+              <select
+                class="form-control contact__form-input"
+                name="state"
+                id="state"
+              >
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div>
+            <!-- Zip Field -->
+            <div class="form-group contact__form-field">
+              <label for="zip">Zip</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="zip"
+                name="zip"
+                placeholder="Enter zip"
+              />
+            </div>
+            <!-- Phone Field -->
+            <div class="form-group contact__form-field">
+              <label for="phone">Phone</label>
+              <input
+                type="tel"
+                class="form-control contact__form-input"
+                id="phone"
+                name="phone"
+                placeholder="Enter phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                required
+              />
+            </div>
+            <!-- Email Field -->
+            <div class="form-group contact__form-field">
+              <label for="email">Email address</label>
+              <input
+                type="email"
+                class="form-control contact__form-input"
+                id="email"
+                placeholder="name@example.com"
+                required
+              />
+            </div>
+            <!-- Type of Lot -->
+            <div class="form-group contact__form-field">
+              <label for="typeOfLot">Type of Lot</label>
+              <select
+                class="form-control contact__form-input"
+                id="typeOfLot"
+                name="typeOfLot"
+              >
+                <option>Inside</option>
+                <option>Cul de sac</option>
+                <option>Corner</option>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+              </select>
+            </div>
+            <!-- Type of Service -->
+            <div class="form-group contact__form-field">
+              <label for="typeOfService">Type of Service</label>
+              <select
+                class="form-control contact__form-input"
+                id="typeOfService"
+                name="typeOfService"
+              >
+                <option>Weekly</option>
+                <option>Full Service</option>
+              </select>
+            </div>
+            <!-- Pets -->
+            <div class="form-group contact__form-field">
+              <label for="pets">Pets in yard?</label>
+              <select
+                class="form-control contact__form-input"
+                id="pets"
+                name="pets"
+              >
+                <option>Yes</option>
+                <option>No</option>
+              </select>
+            </div>
+            <!-- Gate Locks -->
+            <div class="form-group contact__form-field">
+              <label for="gatelocks">Gates Locked?</label>
+              <select
+                class="form-control contact__form-input"
+                id="gatelocks"
+                name="gatelocks"
+              >
+                <option>Yes</option>
+                <option>No</option>
+              </select>
+            </div>
+            <!-- Recaptcha -->
+            <div class="form-group">
+              <div data-netlify-recaptcha="true"></div>
+            </div>
+            <!-- <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check box example</label>
+            </div> -->
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
 
-          <!-- Address Field -->
-          <div class="form-group">
-            <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" name="address" placeholder="Enter address">
-          </div>
-
-          <!-- City Field -->
-          <div class="form-group">
-            <label for="city">City</label>
-            <input type="text" class="form-control" id="city" name="city" placeholder="Enter city">
-          </div>
-
-          <!-- State Field -->
-          <div class="form-group">
-            <label for="state">State</label>
-            <select class="form-control" name="state" id="state">
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="CT">Connecticut</option>
-              <option value="DE">Delaware</option>
-              <option value="DC">District Of Columbia</option>
-              <option value="FL">Florida</option>
-              <option value="GA">Georgia</option>
-              <option value="HI">Hawaii</option>
-              <option value="ID">Idaho</option>
-              <option value="IL">Illinois</option>
-              <option value="IN">Indiana</option>
-              <option value="IA">Iowa</option>
-              <option value="KS">Kansas</option>
-              <option value="KY">Kentucky</option>
-              <option value="LA">Louisiana</option>
-              <option value="ME">Maine</option>
-              <option value="MD">Maryland</option>
-              <option value="MA">Massachusetts</option>
-              <option value="MI">Michigan</option>
-              <option value="MN">Minnesota</option>
-              <option value="MS">Mississippi</option>
-              <option value="MO">Missouri</option>
-              <option value="MT">Montana</option>
-              <option value="NE">Nebraska</option>
-              <option value="NV">Nevada</option>
-              <option value="NH">New Hampshire</option>
-              <option value="NJ">New Jersey</option>
-              <option value="NM">New Mexico</option>
-              <option value="NY">New York</option>
-              <option value="NC">North Carolina</option>
-              <option value="ND">North Dakota</option>
-              <option value="OH">Ohio</option>
-              <option value="OK">Oklahoma</option>
-              <option value="OR">Oregon</option>
-              <option value="PA">Pennsylvania</option>
-              <option value="RI">Rhode Island</option>
-              <option value="SC">South Carolina</option>
-              <option value="SD">South Dakota</option>
-              <option value="TN">Tennessee</option>
-              <option value="TX">Texas</option>
-              <option value="UT">Utah</option>
-              <option value="VT">Vermont</option>
-              <option value="VA">Virginia</option>
-              <option value="WA">Washington</option>
-              <option value="WV">West Virginia</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-
-          <!-- Zip Field -->
-          <div class="form-group">
-            <label for="zip">Zip</label>
-            <input type="text" class="form-control" id="zip" name="zip" placeholder="Enter zip">
-          </div>
-
-          <!-- Phone Field -->
-          <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-            required>
-          </div>
-
-          <!-- Email Field -->
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
-          </div>
-
-          <!-- Type of Lot -->
-          <div class="form-group">
-            <label for="typeOfLot">Type of Lot</label>
-            <select class="form-control" id="typeOfLot" name="typeOfLot">
-              <option>Inside</option>
-              <option>Cul de sac</option>
-              <option>Corner</option>
-            </select>
-          </div>
-
-          <!-- Type of Service -->
-          <div class="form-group">
-            <label for="typeOfService">Type of Service</label>
-            <select class="form-control" id="typeOfService" name="typeOfService">
-              <option>Weekly</option>
-              <option>Full Service</option>
-            </select>
-          </div>
-
-          <!-- Pets -->
-          <div class="form-group">
-            <label for="pets">Pets in yard?</label>
-            <select class="form-control" id="pets" name="pets">
-              <option>Yes</option>
-              <option>No</option>
-            </select>
-          </div>
-
-          <!-- Gate Locks -->
-          <div class="form-group">
-            <label for="gatelocks">Gates Locked?</label>
-            <select class="form-control" id="gatelocks" name="gatelocks">
-              <option>Yes</option>
-              <option>No</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <div data-netlify-recaptcha="true"></div>
-          </div>
-          <!-- <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check box example</label>
-          </div> -->
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-
-        <div class="services">
-          <div class="service"><h2>Landscape</h2></div>
-          <div class="service"><h2>Hardscape</h2></div>
-          <div class="service"><h2>Design</h2></div>
-          <div class="service"><h2>Maintenance</h2></div>
+        <div class="service__wrapper">
+          <div class="service service--1"><h2>Landscape</h2></div>
+          <div class="service service--2"><h2>Hardscape</h2></div>
+          <div class="service service--3"><h2>Design</h2></div>
+          <div class="service service--4"><h2>Maintenance</h2></div>
         </div>
       </main>
+
       <footer class="footer">
-        <!-- Sunspeed Creative | Copyright &copy; 2018 -->
+        <div class="footer__links">
+          <a href="" class="footer__link privacy-policy">Privacy Policy</a>
+          <a href="" class="footer__link disclaimer">Disclaimer</a>
+          <a href="" class="footer__link damages">Damages</a>
+        </div>
+        <div class="footer__info">
+          <h2 class="footer__name">RMJ Landscapes, Inc.</h2>
+          <address>
+            <span class="po-box">PO Box 940144 </span
+            ><span class="city">Plano</span>, <span class="state">TX</span>
+            <span class="zip">75094</span>
+          </address>
+          <a href="tel:972-424-7252"
+            ><span class="phone-number">972-424-7251</span></a
+          >
+        </div>
       </footer>
-    </main>
-    <!-- <script src="js/main.js"></script> -->
+    </div>
+    <!-- Scripts -->
+    <script src="js/main.js"></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
