tweaked a lot of the homepage to look decent

--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@
       </main>
 
       <footer class="footer">
+        <a class="footer__logo">
+          <img
+            class="footer__logo-img"
+            src="/dist/images/RMJ_Logo.png"
+            alt="RMJ Logo"
+          />
+        </a>
         <div class="footer__links">
           <a href="" class="footer__link privacy-policy">Privacy Policy</a>
           <a href="" class="footer__link disclaimer">Disclaimer</a>
