--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
             </div> -->
             <!-- Email Field -->
             <div class="form-group contact__form-field">
-              <label for="email">Email address</label>
+              <label for="emailField">Email address</label>
               <input
                 type="email"
                 class="form-control contact__form-input"
-                id="email"
+                id="emailField"
                 placeholder="name@example.com"
                 required
               />
