added submit button

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <p>
               <label>Your Email: <input type="email" name="email"/></label>
             </p>
+            <button type="submit">Send</button>
           </form>
         </div>
 
