--- a/index.html
+++ b/index.html
@@ -112,14 +112,195 @@
         <!-- Contact Section -->
         <div class="contact">
           <h2 class="homepage-headline contact__headline">Get In Touch</h2>
-          <form name="contact" method="POST" data-netlify="true">
-            <p>
-              <label>Your Name: <input type="text" name="name"/></label>
-            </p>
-            <p>
-              <label>Your Email: <input type="email" name="email"/></label>
-            </p>
-            <button type="submit">Send</button>
+          <form method="POST" data-netlify="true" class="contact__form">
+            <!-- Name Field -->
+            <div class="form-group contact__form-field">
+              <label for="name">Name</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="name"
+                name="name"
+                placeholder="Enter name"
+                required
+              />
+            </div>
+            <!-- Address Field -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="address">Address</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="address"
+                name="address"
+                placeholder="Enter address"
+              />
+            </div> -->
+            <!-- City Field -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="city">City</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="city"
+                name="city"
+                placeholder="Enter city"
+              />
+            </div> -->
+            <!-- State Field -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="state">State</label>
+              <select
+                class="form-control contact__form-input"
+                name="state"
+                id="state"
+              >
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div> -->
+            <!-- Zip Field -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="zip">Zip</label>
+              <input
+                type="text"
+                class="form-control contact__form-input"
+                id="zip"
+                name="zip"
+                placeholder="Enter zip"
+              />
+            </div> -->
+            <!-- Phone Field -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="phone">Phone</label>
+              <input
+                type="tel"
+                class="form-control contact__form-input"
+                id="phone"
+                name="phone"
+                placeholder="Enter phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                required
+              />
+            </div> -->
+            <!-- Email Field -->
+            <div class="form-group contact__form-field">
+              <label for="emailField">Email address</label>
+              <input
+                type="email"
+                class="form-control contact__form-input"
+                id="emailField"
+                placeholder="name@example.com"
+              />
+            </div>
+            <!-- Type of Lot -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="typeOfLot">Type of Lot</label>
+              <select
+                class="form-control contact__form-input"
+                id="typeOfLot"
+                name="typeOfLot"
+              >
+                <option>Inside</option>
+                <option>Cul de sac</option>
+                <option>Corner</option>
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+              </select>
+            </div> -->
+            <!-- Type of Service -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="typeOfService">Type of Service</label>
+              <select
+                class="form-control contact__form-input"
+                id="typeOfService"
+                name="typeOfService"
+              >
+                <option>Weekly</option>
+                <option>Full Service</option>
+              </select>
+            </div> -->
+            <!-- Pets -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="pets">Pets in yard?</label>
+              <select
+                class="form-control contact__form-input"
+                id="pets"
+                name="pets"
+              >
+                <option>Yes</option>
+                <option>No</option>
+              </select>
+            </div> -->
+            <!-- Gate Locks -->
+            <!-- <div class="form-group contact__form-field">
+              <label for="gatelocks">Gates Locked?</label>
+              <select
+                class="form-control contact__form-input"
+                id="gatelocks"
+                name="gatelocks"
+              >
+                <option>Yes</option>
+                <option>No</option>
+              </select>
+            </div> -->
+            <!-- Recaptcha -->
+            <div class="form-group">
+              <div data-netlify-recaptcha="true"></div>
+            </div>
+            <!-- <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check box example</label>
+            </div> -->
+            <button type="submit" class="btn">Submit</button>
           </form>
         </div>
 
